[package]
name = "rsu-cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
indicatif = "0.17.3"
itertools = "0.10.5"
kdam = "0.3.0"
rayon = "1.6.1"
rustc-hash = "1.1.0"
